# iohk-nix

./: .gitignore  README.md  action.yml  bors.toml  changelog.md  ci.nix  clean-source-haskell.nix  commit-id.nix  config.nix  default.nix  fetch-nixpkgs.nix  fetch-tarball-with-override.nix  flake.nix  get-packages.nix  haskell-hackage-stackage.nix  haskell-packages.nix  haskell.nix  libs.json  linux_cross.nix  maybe-env.nix  mingw_w64.nix  nix-tools-default.nix  nix-tools-iohk-extras.nix  nix-tools-iohk-module.nix  nix-tools-iohk-overlay.nix  nix-tools-regenerate.nix  nix-tools-release.nix  nix-tools.nix  release.nix  run-haskell.nix  shell.nix  stack-shell.nix  stack2nix-regenerate.nix
.buildkite/: pin.sh  pipeline.yml  set-skeleton-pin.sh
cabal-project-regenerate/: default.nix  result
cardano-lib/: allegra-byron-genesis.json  allegra-config.nix  allegra-shelley-genesis.json  alonzo-blue-config.nix  alonzo-purple-config.nix  alonzo-qa-config.nix  alonzo-white-config.nix  alpha1-config.nix  alpha1-shelley-genesis.json  alpha2-config.nix  alpha2-genesis.json  configuration.yaml  db-sync-log-config.nix  default.nix  dijkstra-config.nix  explorer-log-config.nix  ff-config.nix  ff-genesis.json  ff-shelley-genesis.json  generic-log-config-legacy.nix  generic-log-config.nix  generic-tracer-config.nix  latency-tests-genesis.json  launchpad-config.nix  leios-config.nix  mainnet-candidate-byron-genesis.json  mainnet-candidate-config.nix  mainnet-config-bp.nix  mainnet-config.nix  mainnet_candidate-byron-genesis.json  mainnet_candidate-config.nix  mainnet_candidate-shelley-genesis.json  mainnet_candidate_2-byron-genesis.json  mainnet_candidate_2-config.nix  mainnet_candidate_2-shelley-genesis.json  mainnet_candidate_3-byron-genesis.json  mainnet_candidate_3-config.nix  mainnet_candidate_3-shelley-genesis.json  mainnet_candidate_4-config.nix  marlowe-dev-config.nix  (+41 more)
cardano-sl/: nixpkgs-src.json
choco/: default.nix  nugetpkgs-mono.json  nunit-tester.patch  restore-debug.patch  uppercut.patch  xbuild.patch
ci/: aggregates.nix  check-hydra.nix  check-hydra.sh  check-nix-tools.nix  check-source-repo-tags-on-master.nix  check-stack-project.nix
daedalus/: nixpkgs-src.json
docs/: buildkite-scripts.md  gotcha-3.md  gotcha-4.md  gotcha-5.md  gotcha-6.md  nix-toolification.org  nix.md  start.md
ghc-packages/: base-4.12.0.0.nix  ghc-8.4.4.nix  ghc-8.6.3.nix  ghc-8.6.4.nix  ghc-8.6.5.nix  ghc-boot-8.4.4.nix  ghc-boot-8.6.1.nix  ghc-boot-8.6.2.nix  ghc-boot-8.6.3.nix  ghc-boot-8.6.4.nix  ghc-boot-8.6.5.nix  ghc-boot-th-8.4.4.nix  ghci-8.4.4.nix  ghci-8.6.1.nix  ghci-8.6.2.nix  ghci-8.6.3.nix  ghci-8.6.4.nix  ghci-8.6.5.nix  iserv-8.6.1.nix  iserv-8.6.2.nix  iserv-8.6.3.nix  iserv-8.6.4.nix  iserv-8.6.5.nix  iserv-proxy-8.6.1.nix  iserv-proxy-8.6.2.nix  iserv-proxy-8.6.3.nix  iserv-proxy-8.6.4.nix  iserv-proxy-8.6.5.nix  libiserv-8.6.1.nix  libiserv-8.6.2.nix  libiserv-8.6.3.nix  libiserv-8.6.4.nix  libiserv-8.6.5.nix  remote-iserv-8.6.1.nix  remote-iserv-8.6.2.nix  remote-iserv-8.6.3.nix  remote-iserv-8.6.4.nix  remote-iserv-8.6.5.nix  template-haskell-2.13.0.0.nix
gotchas/: README.md  gotcha-1.md  (+2 more)
skeleton/: README.md  cabal.project  default.nix  iohk-skeleton.cabal  lib.nix  release.nix  shell.nix  sr  stack.yaml
skeleton/.buildkite/: bench.sh  default.nix  nightly.yml  pipeline.yml  rebuild.hs
skeleton/app/: iohk-skeleton.hs
skeleton/bench/: Main.hs
skeleton/docs/: default.nix
skeleton/nix/: default.nix  haskell.nix  iohk-common.nix  iohk-nix-src.json  pkgs.nix  regenerate.sh  sources.json  sources.nix  stack-shell.nix
skeleton/nix/.stack.nix/: canonical-json.nix  cardano-binary-test.nix  cardano-binary.nix  cardano-crypto.nix  cardano-prelude-test.nix  cardano-prelude.nix  cborg.nix  contra-tracer.nix  default.nix  iohk-monitoring.nix  iohk-skeleton.nix
skeleton/src/: Skeleton.hs
skeleton/test/unit/: Main.hs  SkeletonSpec.hs
utils/: default.nix  iohk-nix-utils.cabal  rebuild.hs  set-git-rev.hs
utils/lib/: Build.hs  BuildArgs.hs  CommonBuild.hs
(+168 files in other folders)
